Fix for bug 257647 (pulldown menus in top-left corner (regression from 223545) on OS X 10.2). r=jhpedemonte, sr=jst.