widget/src/mac/nsToolkit.h
@@ -76,6 +76,10 @@
 class nsIEventSink;
 class nsIWidget;
 
+#define MAC_OS_X_VERSION_10_0_HEX 0x00001000
+#define MAC_OS_X_VERSION_10_1_HEX 0x00001010
+#define MAC_OS_X_VERSION_10_2_HEX 0x00001020
+#define MAC_OS_X_VERSION_10_3_HEX 0x00001030
 
 class nsToolkit : public nsToolkitBase
 {
